# 2048-game

./: CMakeLists.txt  README.md
src/: animate.cpp  draw.cpp  game.hpp  input.cpp  logic.cpp  main.cpp  renderer.cpp  renderer.hpp
